parser/y.output

state 0
	$accept: .statement $end 

	SELECT  shift 7
	INSERT  shift 8
	UPDATE  shift 9
	DELETE  shift 10
	CREATE  shift 11
	.  error

	statement  goto 1
	select_statement  goto 2
	insert_statement  goto 3
	update_statement  goto 4
	delete_statement  goto 5
	create_statement  goto 6

state 1
	$accept:  statement.$end 

	$end  accept
	.  error


state 2
	statement:  select_statement.    (1)

	.  reduce 1 (src line 31)


state 3
	statement:  insert_statement.    (2)

	.  reduce 2 (src line 33)


state 4
	statement:  update_statement.    (3)

	.  reduce 3 (src line 34)


state 5
	statement:  delete_statement.    (4)

	.  reduce 4 (src line 35)


state 6
	statement:  create_statement.    (5)

	.  reduce 5 (src line 36)


state 7
	select_statement:  SELECT.column_list FROM table_name optional_join_clause optional_where_clause 

	IDENTIFIER  shift 14
	'*'  shift 13
	.  error

	column_list  goto 12

state 8
	insert_statement:  INSERT.INTO table_name LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN 

	INTO  shift 15
	.  error


state 9
	update_statement:  UPDATE.table_name SET update_clause optional_where_clause 

	IDENTIFIER  shift 17
	.  error

	table_name  goto 16

state 10
	delete_statement:  DELETE.FROM table_name optional_where_clause 

	FROM  shift 18
	.  error


state 11
	create_statement:  CREATE.TABLE table_name LPAREN column_definition_list RPAREN 

	TABLE  shift 19
	.  error


state 12
	select_statement:  SELECT column_list.FROM table_name optional_join_clause optional_where_clause 

	FROM  shift 20
	.  error


state 13
	column_list:  '*'.    (13)

	.  reduce 13 (src line 58)


state 14
	column_list:  IDENTIFIER.column_list_tail 
	column_list_tail: .    (16)

	COMMA  shift 22
	.  reduce 16 (src line 65)

	column_list_tail  goto 21

state 15
	insert_statement:  INSERT INTO.table_name LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN 

	IDENTIFIER  shift 17
	.  error

	table_name  goto 23

state 16
	update_statement:  UPDATE table_name.SET update_clause optional_where_clause 

	SET  shift 24
	.  error


state 17
	table_name:  IDENTIFIER.    (24)

	.  reduce 24 (src line 81)


state 18
	delete_statement:  DELETE FROM.table_name optional_where_clause 

	IDENTIFIER  shift 17
	.  error

	table_name  goto 25

state 19
	create_statement:  CREATE TABLE.table_name LPAREN column_definition_list RPAREN 

	IDENTIFIER  shift 17
	.  error

	table_name  goto 26

state 20
	select_statement:  SELECT column_list FROM.table_name optional_join_clause optional_where_clause 

	IDENTIFIER  shift 17
	.  error

	table_name  goto 27

state 21
	column_list:  IDENTIFIER column_list_tail.    (14)

	.  reduce 14 (src line 60)


state 22
	column_list_tail:  COMMA.IDENTIFIER column_list_tail 

	IDENTIFIER  shift 28
	.  error


state 23
	insert_statement:  INSERT INTO table_name.LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN 

	LPAREN  shift 29
	.  error


state 24
	update_statement:  UPDATE table_name SET.update_clause optional_where_clause 

	IDENTIFIER  shift 31
	.  error

	update_clause  goto 30

state 25
	delete_statement:  DELETE FROM table_name.optional_where_clause 
	optional_where_clause: .    (12)

	WHERE  shift 33
	.  reduce 12 (src line 55)

	optional_where_clause  goto 32

state 26
	create_statement:  CREATE TABLE table_name.LPAREN column_definition_list RPAREN 

	LPAREN  shift 34
	.  error


state 27
	select_statement:  SELECT column_list FROM table_name.optional_join_clause optional_where_clause 
	optional_join_clause: .    (8)

	JOIN  shift 37
	.  reduce 8 (src line 45)

	optional_join_clause  goto 35
	join_clause  goto 36

state 28
	column_list_tail:  COMMA IDENTIFIER.column_list_tail 
	column_list_tail: .    (16)

	COMMA  shift 22
	.  reduce 16 (src line 65)

	column_list_tail  goto 38

state 29
	insert_statement:  INSERT INTO table_name LPAREN.column_list RPAREN VALUES LPAREN value_list RPAREN 

	IDENTIFIER  shift 14
	'*'  shift 13
	.  error

	column_list  goto 39

state 30
	update_statement:  UPDATE table_name SET update_clause.optional_where_clause 
	optional_where_clause: .    (12)

	WHERE  shift 33
	.  reduce 12 (src line 55)

	optional_where_clause  goto 40

state 31
	update_clause:  IDENTIFIER.EQUALS value update_clause_tail 

	EQUALS  shift 41
	.  error


state 32
	delete_statement:  DELETE FROM table_name optional_where_clause.    (45)

	.  reduce 45 (src line 141)


state 33
	optional_where_clause:  WHERE.condition 

	IDENTIFIER  shift 43
	.  error

	condition  goto 42

state 34
	create_statement:  CREATE TABLE table_name LPAREN.column_definition_list RPAREN 

	IDENTIFIER  shift 46
	.  error

	column_definition_list  goto 44
	column_definition  goto 45

state 35
	select_statement:  SELECT column_list FROM table_name optional_join_clause.optional_where_clause 
	optional_where_clause: .    (12)

	WHERE  shift 33
	.  reduce 12 (src line 55)

	optional_where_clause  goto 47

state 36
	optional_join_clause:  join_clause.    (7)
	join_clause:  join_clause.JOIN table_name ON condition 

	JOIN  shift 48
	.  reduce 7 (src line 43)


state 37
	join_clause:  JOIN.table_name ON condition 

	IDENTIFIER  shift 17
	.  error

	table_name  goto 49

state 38
	column_list_tail:  COMMA IDENTIFIER column_list_tail.    (15)

	.  reduce 15 (src line 63)


state 39
	insert_statement:  INSERT INTO table_name LPAREN column_list.RPAREN VALUES LPAREN value_list RPAREN 

	RPAREN  shift 50
	.  error


state 40
	update_statement:  UPDATE table_name SET update_clause optional_where_clause.    (41)

	.  reduce 41 (src line 128)


state 41
	update_clause:  IDENTIFIER EQUALS.value update_clause_tail 

	STRING_LITERAL  shift 52
	INTEGER_LITERAL  shift 53
	.  error

	value  goto 51

state 42
	optional_where_clause:  WHERE condition.    (11)

	.  reduce 11 (src line 53)


state 43
	condition:  IDENTIFIER.comparison_operator value 

	EQUALS  shift 55
	NOT_EQUALS  shift 56
	LESS  shift 57
	GREATER  shift 58
	LESS_EQUALS  shift 59
	GREATER_EQUALS  shift 60
	.  error

	comparison_operator  goto 54

state 44
	create_statement:  CREATE TABLE table_name LPAREN column_definition_list.RPAREN 

	RPAREN  shift 61
	.  error


state 45
	column_definition_list:  column_definition.column_definition_list_tail 
	column_definition_list_tail: .    (34)

	COMMA  shift 63
	.  reduce 34 (src line 113)

	column_definition_list_tail  goto 62

state 46
	column_definition:  IDENTIFIER.data_type 

	INT  shift 65
	VARCHAR  shift 66
	TEXT  shift 67
	DATE  shift 68
	FLOAT  shift 69
	.  error

	data_type  goto 64

state 47
	select_statement:  SELECT column_list FROM table_name optional_join_clause optional_where_clause.    (6)

	.  reduce 6 (src line 39)


state 48
	join_clause:  join_clause JOIN.table_name ON condition 

	IDENTIFIER  shift 17
	.  error

	table_name  goto 70

state 49
	join_clause:  JOIN table_name.ON condition 

	ON  shift 71
	.  error


state 50
	insert_statement:  INSERT INTO table_name LPAREN column_list RPAREN.VALUES LPAREN value_list RPAREN 

	VALUES  shift 72
	.  error


state 51
	update_clause:  IDENTIFIER EQUALS value.update_clause_tail 
	update_clause_tail: .    (44)

	COMMA  shift 74
	.  reduce 44 (src line 138)

	update_clause_tail  goto 73

state 52
	value:  STRING_LITERAL.    (25)

	.  reduce 25 (src line 85)


state 53
	value:  INTEGER_LITERAL.    (26)

	.  reduce 26 (src line 87)


state 54
	condition:  IDENTIFIER comparison_operator.value 

	STRING_LITERAL  shift 52
	INTEGER_LITERAL  shift 53
	.  error

	value  goto 75

state 55
	comparison_operator:  EQUALS.    (18)

	.  reduce 18 (src line 72)


state 56
	comparison_operator:  NOT_EQUALS.    (19)

	.  reduce 19 (src line 74)


state 57
	comparison_operator:  LESS.    (20)

	.  reduce 20 (src line 75)


state 58
	comparison_operator:  GREATER.    (21)

	.  reduce 21 (src line 76)


state 59
	comparison_operator:  LESS_EQUALS.    (22)

	.  reduce 22 (src line 77)


state 60
	comparison_operator:  GREATER_EQUALS.    (23)

	.  reduce 23 (src line 78)


state 61
	create_statement:  CREATE TABLE table_name LPAREN column_definition_list RPAREN.    (31)

	.  reduce 31 (src line 103)


state 62
	column_definition_list:  column_definition column_definition_list_tail.    (32)

	.  reduce 32 (src line 107)


state 63
	column_definition_list_tail:  COMMA.column_definition column_definition_list_tail 

	IDENTIFIER  shift 46
	.  error

	column_definition  goto 76

state 64
	column_definition:  IDENTIFIER data_type.    (35)

	.  reduce 35 (src line 116)


state 65
	data_type:  INT.    (36)

	.  reduce 36 (src line 120)


state 66
	data_type:  VARCHAR.LPAREN INTEGER_LITERAL RPAREN 

	LPAREN  shift 77
	.  error


state 67
	data_type:  TEXT.    (38)

	.  reduce 38 (src line 123)


state 68
	data_type:  DATE.    (39)

	.  reduce 39 (src line 124)


state 69
	data_type:  FLOAT.    (40)

	.  reduce 40 (src line 125)


state 70
	join_clause:  join_clause JOIN table_name.ON condition 

	ON  shift 78
	.  error


state 71
	join_clause:  JOIN table_name ON.condition 

	IDENTIFIER  shift 43
	.  error

	condition  goto 79

state 72
	insert_statement:  INSERT INTO table_name LPAREN column_list RPAREN VALUES.LPAREN value_list RPAREN 

	LPAREN  shift 80
	.  error


state 73
	update_clause:  IDENTIFIER EQUALS value update_clause_tail.    (42)

	.  reduce 42 (src line 132)


state 74
	update_clause_tail:  COMMA.IDENTIFIER EQUALS value update_clause_tail 

	IDENTIFIER  shift 81
	.  error


state 75
	condition:  IDENTIFIER comparison_operator value.    (17)

	.  reduce 17 (src line 68)


state 76
	column_definition_list_tail:  COMMA column_definition.column_definition_list_tail 
	column_definition_list_tail: .    (34)

	COMMA  shift 63
	.  reduce 34 (src line 113)

	column_definition_list_tail  goto 82

state 77
	data_type:  VARCHAR LPAREN.INTEGER_LITERAL RPAREN 

	INTEGER_LITERAL  shift 83
	.  error


state 78
	join_clause:  join_clause JOIN table_name ON.condition 

	IDENTIFIER  shift 43
	.  error

	condition  goto 84

state 79
	join_clause:  JOIN table_name ON condition.    (9)

	.  reduce 9 (src line 48)


state 80
	insert_statement:  INSERT INTO table_name LPAREN column_list RPAREN VALUES LPAREN.value_list RPAREN 

	STRING_LITERAL  shift 52
	INTEGER_LITERAL  shift 53
	.  error

	value  goto 86
	value_list  goto 85

state 81
	update_clause_tail:  COMMA IDENTIFIER.EQUALS value update_clause_tail 

	EQUALS  shift 87
	.  error


state 82
	column_definition_list_tail:  COMMA column_definition column_definition_list_tail.    (33)

	.  reduce 33 (src line 111)


state 83
	data_type:  VARCHAR LPAREN INTEGER_LITERAL.RPAREN 

	RPAREN  shift 88
	.  error


state 84
	join_clause:  join_clause JOIN table_name ON condition.    (10)

	.  reduce 10 (src line 50)


state 85
	insert_statement:  INSERT INTO table_name LPAREN column_list RPAREN VALUES LPAREN value_list.RPAREN 

	RPAREN  shift 89
	.  error


state 86
	value_list:  value.value_list_tail 
	value_list_tail: .    (30)

	COMMA  shift 91
	.  reduce 30 (src line 100)

	value_list_tail  goto 90

state 87
	update_clause_tail:  COMMA IDENTIFIER EQUALS.value update_clause_tail 

	STRING_LITERAL  shift 52
	INTEGER_LITERAL  shift 53
	.  error

	value  goto 92

state 88
	data_type:  VARCHAR LPAREN INTEGER_LITERAL RPAREN.    (37)

	.  reduce 37 (src line 122)


state 89
	insert_statement:  INSERT INTO table_name LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN.    (27)

	.  reduce 27 (src line 90)


state 90
	value_list:  value value_list_tail.    (28)

	.  reduce 28 (src line 94)


state 91
	value_list_tail:  COMMA.value value_list_tail 

	STRING_LITERAL  shift 52
	INTEGER_LITERAL  shift 53
	.  error

	value  goto 93

state 92
	update_clause_tail:  COMMA IDENTIFIER EQUALS value.update_clause_tail 
	update_clause_tail: .    (44)

	COMMA  shift 74
	.  reduce 44 (src line 138)

	update_clause_tail  goto 94

state 93
	value_list_tail:  COMMA value.value_list_tail 
	value_list_tail: .    (30)

	COMMA  shift 91
	.  reduce 30 (src line 100)

	value_list_tail  goto 95

state 94
	update_clause_tail:  COMMA IDENTIFIER EQUALS value update_clause_tail.    (43)

	.  reduce 43 (src line 136)


state 95
	value_list_tail:  COMMA value value_list_tail.    (29)

	.  reduce 29 (src line 98)


34 terminals, 24 nonterminals
46 grammar rules, 96/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
73 working sets used
memory: parser 42/240000
14 extra closures
77 shift entries, 1 exceptions
43 goto entries
0 entries saved by goto default
Optimizer space used: output 97/240000
97 table entries, 2 zero
maximum spread: 34, maximum offset: 93
